[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon_arrow_down.svg" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Main" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="PanelContainer" parent="."]
margin_right = 120.0
margin_bottom = 600.0

[node name="M" type="MarginContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 113.0
margin_bottom = 593.0
custom_constants/margin_right = 10
custom_constants/margin_top = 20
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VB" type="VBoxContainer" parent="Panel/M"]
margin_left = 10.0
margin_top = 20.0
margin_right = 96.0
margin_bottom = 576.0
custom_constants/separation = 20

[node name="LoadImage" type="Button" parent="Panel/M/VB"]
margin_right = 86.0
margin_bottom = 20.0
text = "Load Image"

[node name="SaveImage" type="Button" parent="Panel/M/VB"]
margin_top = 40.0
margin_right = 86.0
margin_bottom = 60.0
text = "Save Image"

[node name="VB" type="VBoxContainer" parent="Panel/M/VB"]
margin_top = 80.0
margin_right = 86.0
margin_bottom = 198.0

[node name="C" type="CenterContainer" parent="Panel/M/VB/VB"]
margin_right = 86.0
margin_bottom = 100.0

[node name="BrushSize" type="VSlider" parent="Panel/M/VB/VB/C"]
margin_left = 35.0
margin_right = 51.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
value = 50.0

[node name="Label" type="Label" parent="Panel/M/VB/VB"]
margin_top = 104.0
margin_right = 86.0
margin_bottom = 118.0
text = "Brush Size"
align = 1

[node name="VB2" type="VBoxContainer" parent="Panel/M/VB"]
margin_top = 218.0
margin_right = 86.0
margin_bottom = 282.0

[node name="TargetColor" type="ColorPickerButton" parent="Panel/M/VB/VB2"]
margin_right = 86.0
margin_bottom = 20.0
color = Color( 1, 1, 1, 1 )

[node name="CenterContainer" type="CenterContainer" parent="Panel/M/VB/VB2"]
margin_top = 24.0
margin_right = 86.0
margin_bottom = 40.0

[node name="Arrow" type="TextureRect" parent="Panel/M/VB/VB2/CenterContainer"]
margin_left = 35.0
margin_right = 51.0
margin_bottom = 16.0
texture = ExtResource( 1 )

[node name="ReplacementColor" type="ColorPickerButton" parent="Panel/M/VB/VB2"]
margin_top = 44.0
margin_right = 86.0
margin_bottom = 64.0
color = Color( 0.101961, 0.8, 0, 1 )

[node name="VB3" type="VBoxContainer" parent="Panel/M/VB"]
margin_top = 302.0
margin_right = 86.0
margin_bottom = 336.0

[node name="Tolerance" type="HSlider" parent="Panel/M/VB/VB3"]
margin_right = 86.0
margin_bottom = 16.0
value = 20.0

[node name="Label" type="Label" parent="Panel/M/VB/VB3"]
margin_top = 20.0
margin_right = 86.0
margin_bottom = 34.0
text = "Tolerance"
align = 1

[node name="Image" type="TextureRect" parent="."]
margin_left = 124.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="c" type="CanvasLayer" parent="."]

[node name="FileDialog" type="FileDialog" parent="c"]
margin_right = 874.0
margin_bottom = 476.0
access = 2
filters = PoolStringArray( "*.jpg,*.jpeg,*.png,*.webp,*.tga,*.bmp ; Image files" )

[connection signal="pressed" from="Panel/M/VB/LoadImage" to="." method="_on_LoadImage_pressed"]
[connection signal="pressed" from="Panel/M/VB/SaveImage" to="." method="_on_SaveImage_pressed"]
[connection signal="file_selected" from="c/FileDialog" to="." method="_on_FileDialog_file_selected"]
